2019. 7.24. Modified _zShape3DOpticFromZTK to ignore unidentified optical info. [zeo_shape]
2019. 7.24. Modified zSphere3DFit. [zeo_shape_sphere]
2019. 7.24. Debugged zeo_shape_ellips3d_com. [zeo_shape_ellips]
2019. 7.24. Debugged zCyl3DInertia. [zeo_shape_cyl]
2019. 7.24. Added _zMat3DSqrNorm, zMat3DSqrNorm, _zMat3DNorm and zMat3DNorm. [zeo_mat3d]
2019. 7.24. Debugged zCone3DInertia. [zeo_shape_cone]
2019. 7.24. Added zVec3DOrthoNormalSpace. [zeo_vec3d]
2019. 7.23. Debugged _zShape3DTypeFromZTK. [zeo_shape]
2019. 7.23. Added z*3DAlloc. [zeo_shape_box, zeo_shape_sphere, zeo_shape_cyl, zeo_shape_cone, zeo_shape_ellips, zeo_shape_ecyl, zeo_shape_ph, zeo_shape_nurbs]
2019. 7.23. Added _alloc member in zShape3DCom and debugged _zShape3DTypeFromZTK and zShape3DFScan. [zeo_shape]
2019. 7.23. Reallocated zShape3DCreate*() methods to each subclass module. [zeo_shape, zeo_shape_box, zeo_shape_sphere, zeo_shape_cyl, zeo_shape_cone, zeo_shape_ellips, zeo_shape_ecyl, zeo_shape_ph, zeo_shape_nurbs]
2019. 7.23. Abolished zShape3DBB member and restructured zeo_bv above zeo_shape. [zeo_shape, zeo_bv]
2019. 7.23. Abolished zeo_prim and redesigned zShape3D class and children classes. zShapeType, zShapeBody, zShapeTypeExpr and zShapeTypeByStr also abolished. [zeo_errmsg, zeo_nurbs, zeo_box, zeo_shape, zeo_shape_box, zeo_shape_sphere, zeo_shape_cyl, zeo_shape_cone, zeo_shape_ellips, zeo_shape_ecyl, zeo_shape_ph, zeo_shape_nurbs, zeo_bv, app]
2019. 7.19. Moved zOpticArray from zeo_mshape to zeo_optic and renamed it to zOpticalInfoArray. [zeo_mshape, zeo_optic]
2019. 7.19. Moved zShapeArray from zeo_mshape to zeo_shape and renamed it to zShape3DArray. [zeo_mshape, zeo_shape]
2019. 7.19. Separated zeo_ph_stl from zeo_ph. [zeo_ph, zeo_ph_stl]
2019. 7.18. Renamed _zSTLVertListToVertArray and _zSTLFacetListToFaceArray to _zSTLVertListToVec3DArray and _zSTLFacetListToTri3DArray, respectivey. [zeo_ph]
2019. 7.18. Moved zFaceArray to zeo_elem.h and renamed it to zTri3DArray. [zeo_ph, zeo_elem]