@@ -1,5 +1,5 @@
 PREFIX=$(HOME)/usr
 PROJNAME=zeo
-VERSION=1.4.0
+VERSION=1.4.1
 
 DEPENDENCY="zeda=1.2.11;zm=1.2.4"
