@@ -1,0 +1,12 @@
+#include <zeo/zeo_mapnet.h>
+
+int main(int argc, char *argv[])
+{
+  zMapNet mn;
+
+  if( argc <= 1 ) return 1;
+  zMapNetReadZTK( &mn, argv[1] );
+  zMapNetFPrint( stdout, &mn );
+  zMapNetDestroy( &mn );
+  return 0;
+}
