@@ -1,3 +1,10 @@
+2019. 7.26. Added zFrame3DFromZTK and zFrame3DDHFromZTK. [zeo_frame]
+2019. 7.26. Added zMat3DFromZTK. [zeo_mat3d]
+2019. 7.26. Added zVec6DFromZTK. [zeo_vec6d]
+2019. 7.25. Renamed zTerraFree to zTerraDestroy. [zeo_map_terra]
+2019. 7.25. Renamed zeo_terra to zeo_map_terra. [zeo_map_terra]
+2019. 7.25. Redesigned zMap class and added zMapNet class. [zeo_map, zeo_mapnet]
+2019. 7.24. Modified _zShape3DTypeFromZTK. [zeo_shape]
 2019. 7.24. Modified _zShape3DOpticFromZTK to ignore unidentified optical info. [zeo_shape]
 2019. 7.24. Modified zSphere3DFit. [zeo_shape_sphere]
 2019. 7.24. Debugged zeo_shape_ellips3d_com. [zeo_shape_ellips]
